# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//testing/test.gni")

group("mojom") {
  testonly = true
  deps = []
  if (is_linux && defined(go_build_tool) && go_build_tool != "") {
    deps += [ "//mojom/mojom_tool" ]
  }
}
